Closed Bug 1128807 Opened 9 years ago Closed 9 years ago

Fix to keep IonMonkey for MIPS compiling

Categories

(Core :: JavaScript Engine: JIT, defect)

x86_64
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla38
Tracking Status
firefox38 --- fixed

People

(Reporter: hev, Assigned: hev)

References

Details

Attachments

(1 file)

User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:35.0) Gecko/20100101 Firefox/35.0
Build ID: 20150126171358

Steps to reproduce:

Added a missing member function into MacroAssembler-mips:
void ma_b(Address addr, ImmGCPtr imm, Label *l, Condition c, JumpKind jumpKind = LongJump);
Attachment #8558283 - Attachment is patch: true
Attachment #8558283 - Attachment mime type: application/x-ext-patch → text/plain
Attachment #8558283 - Flags: review?(branislav.rankov)
Attachment #8558283 - Flags: review?(branislav.rankov) → review+
Blocks: 1128449
Keywords: checkin-needed
https://hg.mozilla.org/mozilla-central/rev/0033e80ffbdb
Status: UNCONFIRMED → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla38
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: