Bug 1128807 - IonMonkey: MIPS: Fix to keep mips compiling. r=rankov